<resources>
    <string name="app_name">问不问</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_pass_field">密码：</string>
    <string name="login_pass_hint">请输入密码</string>
    <string name="login_name_hint">请输入用户名</string>
    <string name="login_name_field">账号：</string>
    <string name="login_submit_txt">登录</string>
    <string name="login_login_txt">登录</string>
    <string name="login_register_txt">注册</string>
    <string name="title_activity_question_list">问题广场</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">注销</string>
    <string name="question_add_submit">提问</string>
    <string name="title_activity_time_line">TimeLineActivity</string>
    <string name="title_activity_discover">DiscoverActivity</string>
</resources>
